# pindurai

./: .gitignore  .pre-commit-config.yaml  README.md  Taskfile.yml  build_frontend.sh
backend/: .gitignore  manage.py  pyproject.toml
backend/app/: admin.py  models.py
backend/app/api/: __init__.py  api.py  auth.py  dto.py  schemas.py  service.py
backend/app/migrations/: 0001_initial.py  0002_alter_contract_options_contract_created_by.py  0003_alter_client_options_alter_pos_options_and_more.py  0004_alter_sale_value_alter_salemovement_description_and_more.py  0005_alter_sale_value.py  0006_appuser_allowed_pos.py  0007_alter_appuser_allowed_pos.py  0008_userextra.py  0009_remove_userextra_id_alter_userextra_user.py
backend/app/tests/api/: test_auth.py
backend/pindurai/: asgi.py  settings.py  urls.py  wsgi.py
docs/: casos-de-uso.puml  entidades.puml
frontend/: README.md  index.html  package.json  quasar.config.js
frontend/src/components/: SalesCard.vue  SalesMovement.vue
frontend/src/layouts/: MainLayout.vue  NoMenuLayout.vue
frontend/src/pages/: ErrBackendOffline.vue  HomePage.vue  IndexPage.vue  LoginPage.vue
frontend/src/router/: index.js  routes.js
frontend/src/services/: backendApi.js  backendStorage.js  consts.js  logging.js  utils.js
frontend/src/stores/: mainStore.js
pipeline/: docker-compose.yaml  frontend.Dockerfile  frontend.Dockerfile.dockerignore
