[tool.poetry]
name = "pindurai-backend"
version = "0.1.0"
description = ""
authors = ["Guionardo Furlan <guionardo@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
